# RTC

./: .gitignore  README.md  pyproject.toml
docs/: ARCHITECTURE.md  COMPLETION_BACKLOG.md  EXPERIMENTAL_METHODOLOGY.md  EXPERIMENTAL_RESULTS_V1.md  FLEETRMW_DATA_FRAME_V1.md  FLEETRMW_SAMPLE_ENVELOPE_V1.md  FLEET_LEVEL_QOS_QOE_OPTIMIZER_V1.md  FLEET_OPTIMIZER_RUNTIME_ACTUATION_V1.md  KIM_CHI_NAM.md  LAGRANGIAN_OUTCOME_ADAPTATION_V1.md  LAGRANGIAN_OUTCOME_ADAPTATION_V2.md  LAGRANGIAN_OUTCOME_ADAPTATION_V3.md  LAGRANGIAN_SWEEP_V1.md  LIVE_PLAN_SCALE_PROBE_V1.md  NETWORK_SIMULATOR_PLAN.md  ONLINE_FLEET_PATH_PLAN_CONTROLLER_V1.md  RESEARCH_PLAN.md  RMW_ACK_NACK_V1.md  RMW_ACTION_FRAME_CONTRACT_V1.md  RMW_ACTION_QOS_V1.md  RMW_LIVE_BASELINE_COMPARISON_V1.md  RMW_MINIMAL_BOUNDARY_V1.md  RMW_MULTI_ROBOT_LIVE_NETEM_MATRIX_V1.md  RMW_MULTI_ROBOT_LIVE_STOCHASTIC_NETEM_ABLATION_V1.md  RMW_MULTI_ROBOT_LIVE_STOCHASTIC_NETEM_MATRIX_V1.md  RMW_MULTI_ROBOT_LIVE_STOCHASTIC_NETEM_SWEEP_V1.md  RMW_MULTI_ROBOT_LIVE_TELEMETRY_MATRIX_V1.md  RMW_MULTI_ROBOT_LIVE_TELEMETRY_PLAN_PROBE_V1.md  RMW_MULTI_ROBOT_QOS_SCHEDULER_V1.md  RMW_ROADMAP.md  RMW_ROUTER_FLEET_PLAN_PROBE_V1.md  RMW_ROUTER_LIVE_TELEMETRY_PLAN_PROBE_V1.md  RMW_SAMPLE_CONTRACT_V1.md  RMW_SERVICE_ERROR_V1.md  RMW_SERVICE_QOS_V1.md  RMW_SERVICE_TIMEOUT_V1.md  ROBOT_BUDGET_AWARE_CONTROLLER_V1.md  ROS2_8ROBOT_LIVELINESS_ACK_HORIZON_V1.md  ROS2_DIRECT_RMW_NETEM_MATRIX_V1.md  ROS2_DOCKER_LIVE_BRIDGE_T3.md  (+60 more)
experiments/: lagrangian_variants_v1.json  local_controller_profiles_v1.json  ros2_live_bridge_tb4_binding_v1.json  ros2_live_bridge_tb4_typed_projection_v1.json  ros2_live_bridge_tb4_v1.json  testbed_manifest.json
fleetqox/: __init__.py  comparison.py  control_plane.py  fleet_optimizer.py  fleet_scale.py  lagrangian_adaptation.py  lagrangian_sweep.py  live_path_controller.py  live_plan_scale.py  local_control_lease.py  model.py  network_replay.py  online_fleet_planner.py  projection_identity.py  projection_quality_gate.py  projection_quality_ros.py  repair_scheduler.py  reporting.py  rmw_ack.py  rmw_boundary.py  rmw_contract.py  rmw_frame.py  rmw_socket.py  rmw_transport_loop.py  ros2_live_bridge.py  ros2_netem.py  ros2_perf.py  ros2_shim.py  scheduler.py  semantic_contract.py  sidecar_contract.py  sidecar_egress.py  sidecar_metrics.py  sidecar_repeated.py  sidecar_runtime.py  simulator.py  testbed.py  trace.py  transport_selector.py  udp_metrics.py
ros2_ws/src/fleetrmw_interfaces/: CMakeLists.txt  package.xml
ros2_ws/src/fleetrmw_interfaces/action/: DispatchFleetTask.action  NavigateFleet.action
ros2_ws/src/fleetrmw_interfaces/msg/: ProjectionQuality.msg  QualifiedLaserScan.msg  QualifiedOdometry.msg  SampleIdentity.msg
ros2_ws/src/rmw_fleetqox_cpp/: CMakeLists.txt  README.md  capabilities.json  package.xml
ros2_ws/src/rmw_fleetqox_cpp/include/rmw_fleetqox_cpp/: data_frame.hpp  quic_gateway_transport.hpp  shared_memory_transport.hpp
ros2_ws/src/rmw_fleetqox_cpp/src/: action_frame_probe.cpp  action_router_probe.cpp  allocation_probe.cpp  cpp_typesupport_probe.cpp  data_frame.cpp  frame_probe.cpp  geometry_twist_probe.cpp  graph_probe.cpp  interprocess_pubsub_probe.cpp  lifecycle_probe.cpp  loaned_message_probe.cpp  qos_event_probe.cpp  qos_probe.cpp  quic_dependency_probe.cpp  quic_gateway_burst_publish_probe.cpp  quic_gateway_publish_probe.cpp  quic_gateway_transport.cpp  rcl_graph_talker.cpp  rcl_service_node.cpp  rcl_string_probe.cpp  rclcpp_interprocess_probe.cpp  reliability_probe.cpp  reliable_interprocess_probe.cpp  remote_graph_lease_probe.cpp  remote_graph_probe.cpp  rmw_graph.cpp  rmw_identifier.cpp  rmw_lifecycle.cpp  rmw_pubsub.cpp  rmw_stubs.cpp  rmw_wait.cpp  serialized_pubsub_probe.cpp  service_error_probe.cpp  service_qos_probe.cpp  shared_memory_transport.cpp  std_msgs_string_probe.cpp  transport_loop_smoke.cpp  typed_pubsub_probe.cpp  udp_router_probe.cpp  wait_probe.cpp
scripts/: __init__.py  adapt_lagrangian_from_netem.py  analyze_sidecar_runtime.py  analyze_udp_trace.py  apply_netem_transition.py  compare_fleetrmw_live_baselines.py  compare_ros2_robot_budget_summaries.py  compare_t2e_baselines.py  export_traces.py  feed_sidecar_closed_loop.py  feed_sidecar_synthetic.py  replay_trace.py  report_robot_budget_controller.py  report_sidecar_repeated.py  report_t2e_results.py  run_benchmark.py  run_fleet_optimizer_probe.py  run_fleet_optimizer_redundancy_budget_probe.py  run_fleet_optimizer_runtime_probe.py  run_fleet_scale_benchmark.py  run_lagrangian_sweep.py  run_large_scale_rmw_comparison.py  run_live_plan_scale_probe.py  run_ns3_docker_fleet_matrix.py  run_ns3_docker_wifi_mobility_matrix.py  run_ns3_docker_wifi_roaming_matrix.py  run_ns3_replay.py  run_online_fleet_plan_probe.py  run_rmw_boundary_smoke.py  run_rmw_docker_action_frame_probe.py  run_rmw_docker_allocation_probe.py  run_rmw_docker_cpp_typesupport_probe.py  run_rmw_docker_fleet_repair_capacity_frontier.py  run_rmw_docker_loaned_message_probe.py  run_rmw_docker_multi_robot_live_netem_matrix.py  run_rmw_docker_multi_robot_live_stochastic_netem_ablation.py  run_rmw_docker_multi_robot_live_stochastic_netem_matrix.py  run_rmw_docker_multi_robot_live_stochastic_netem_sweep.py  run_rmw_docker_multi_robot_live_telemetry_matrix.py  run_rmw_docker_multi_robot_live_telemetry_plan_probe.py  (+88 more)
tests/: test_comparison.py  test_control_plane.py  test_feed_sidecar_closed_loop.py  test_fleet_optimizer.py  test_fleet_scale.py  test_fleet_scale_report_runners.py  test_fleetrmw_live_baseline_comparison.py  test_lagrangian_adaptation.py  test_lagrangian_sweep.py  test_live_plan_scale.py  test_local_control_lease.py  test_network_replay.py  test_online_fleet_planner.py  test_projection_identity.py  test_projection_quality_gate.py  test_projection_quality_ros.py  test_repair_scheduler.py  test_reporting.py  test_rmw_ack.py  test_rmw_boundary.py  test_rmw_boundary_smoke.py  test_rmw_contract.py  test_rmw_fleetqox_cpp_package.py  test_rmw_frame.py  test_rmw_live_telemetry_matrix.py  test_rmw_socket.py  test_ros2_direct_rmw_netem_probe.py  test_ros2_feedback_producers.py  (+25 more)
