<?xml version="1.0"?>
<package format="3">
  <name>fleetrmw_interfaces</name>
  <version>0.1.0</version>
  <description>FleetRMW prototype ROS 2 message interfaces.</description>
  <maintainer email="fleetqox@example.invalid">FleetRMW Prototype</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
</package>
