<?xml version="1.0"?>
<package format="3">
  <name>rmw_fleetqox_cpp</name>
  <version>0.1.0</version>
  <description>FleetRMW C++ transport boundary reference for data frames and ACK/NACK feedback.</description>
  <maintainer email="fleetqox@example.invalid">FleetRMW Prototype</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rcutils</depend>
  <depend>rmw</depend>
  <depend>geometry_msgs</depend>
  <depend>rcl</depend>
  <depend>rclcpp</depend>
  <depend>rosidl_runtime_c</depend>
  <depend>rosidl_typesupport_c</depend>
  <depend>rosidl_typesupport_cpp</depend>
  <depend>rosidl_typesupport_introspection_c</depend>
  <depend>rosidl_typesupport_introspection_cpp</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <member_of_group>rmw_implementation_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
